--- a/mt_serial_interval_calculation.Rmd
+++ b/mt_serial_interval_calculation.Rmd
@@ -169,7 +169,7 @@ mt_case_data <- read_xlsx(paste0(file_path, "Input/SI_Local_v_Import Data_09.10.
 mt_li_analysis_data <- mt_case_data %>% 
    #filter(dates < "2020-05-01" & dates >= "2020-03-01") %>% # early
    #filter(dates >= "2020-05-01" & dates < "2020-08-01") %>% # late
-   filter(dates < "2020-03-28" & dates >= "2020-03-01") %>% # pre sip
+   #filter(dates < "2020-03-28" & dates >= "2020-03-01") %>% # pre sip
    #filter(dates >= "2020-03-28" & dates < "2020-04-26") %>% # sip
    #filter(dates < "2020-06-01" & dates >= "2020-04-26") %>% # phase 1
    #filter(dates >= "2020-06-01" & dates < "2020-08-01") %>% # phase 2
@@ -191,7 +191,7 @@ mt_data <- mt_li_analysis_data %>%
 # Early = 2020-04-30; Late, July, Phase2, and Total = 2020-07-31
 # PreSIP = 2020-03-27; SIP = 2020-04-25
 # Phase1 = 2020-05-31; June = 2020-06-30
-mt_incidence_data <- incidence(mt_data$dates, last_date = "2020-03-27")
+mt_incidence_data <- incidence(mt_data$dates, last_date = "2020-07-31")
 
 mt_li_inc_data <- as.data.frame(mt_incidence_data$dates) %>% 
    mutate(dates = ymd(mt_incidence_data$dates)) %>% 
@@ -368,107 +368,161 @@ sd_si_plot
 
 
 ```{r}
-# Calculate R using known SI
-serial_interval_mean <- 6.53
-serial_interval_sd <- 5.44
+############### Calculate R for each period using known SI 
+# Format analysis data
+# CHANGE DATE FILTER BASED ON DESIRED SI TIMEFRAME
+mt_li_analysis_data <- mt_case_data %>% 
+   #filter(dates < "2020-05-01" & dates >= "2020-03-01") %>% # early
+   #filter(dates >= "2020-05-01" & dates < "2020-08-01") %>% # late
+   #filter(dates < "2020-03-28" & dates >= "2020-03-01") %>% # pre sip
+   #filter(dates >= "2020-03-28" & dates < "2020-04-26") %>% # sip
+   #filter(dates < "2020-06-01" & dates >= "2020-04-26") %>% # phase 1
+   #filter(dates >= "2020-06-01" & dates < "2020-08-01") %>% # phase 2
+   #filter(dates < "2020-07-01" & dates >= "2020-06-01") %>% # june
+   #filter(dates >= "2020-07-01" & dates < "2020-08-01") %>% # july
+   group_by(dates) %>% 
+   mutate(local = sum(local),
+          imported = sum(imported)) %>% 
+   dplyr::select(dates, local, imported) %>% 
+   distinct(dates, .keep_all = TRUE) %>% 
+   arrange(dates)
 
+
+mt_data <- mt_li_analysis_data %>% 
+   mutate(I = local + imported) %>% 
+   dplyr::select(dates, I) 
+
+# CHANGE LAST DATE BASED ON DESIRED SI TIMEFRAME:
+# Early = 2020-04-30; Late, July, Phase2, and Total = 2020-07-31
+# PreSIP = 2020-03-27; SIP = 2020-04-25
+# Phase1 = 2020-05-31; June = 2020-06-30
+mt_incidence_data <- incidence(mt_data$dates, last_date = "2020-07-31")
+
+mt_li_inc_data <- as.data.frame(mt_incidence_data$dates) %>% 
+   mutate(dates = ymd(mt_incidence_data$dates)) %>% 
+   dplyr::select(dates) %>% 
+   left_join(mt_li_analysis_data, by = "dates") %>% 
+   mutate(local = if_else(is.na(local), 0, local),
+          imported = if_else(is.na(imported), 0, imported))
+
+
+# Total SI convergence successful: Mean SI = 5.51 (5.13, 5.90), SD SI = 4.62 (4.21, 5.05)
+# Pre-SIP SI convergence successful: Mean SI = 4.62 (3.79, 5.53), SD SI = 3.67 (2.77, 4.73)
+# SIP SI convergence successful: Mean SI = 8.52 (6.88, 10.37), SD SI = 6.22 (4.61, 8.05)
+# Phase 1 SI convergence successful: Mean SI = 5.35 (3.51, 7.50), SD SI = 4.69 (2.53, 7.36)
+# Phase 2 SI convergence successful: Mean SI = 5.29 (4.88, 5.76), SD SI = 4.45 (3.97, 4.93)
+serial_interval_mean <- 5.29
+serial_interval_sd <- 4.45
+
+# Change t_end based on phase
+# total = 153, pre-sip = 27, sip = 29, phase1 = 35, phase2 = 61
 mt_r_results <- estimate_R(mt_li_inc_data, method = "parametric_si", 
                               config = make_config(list(mean_si = serial_interval_mean, 
                                                         std_si = serial_interval_sd,
                                                         t_start =  2,
-                                                        t_end = 61)))
-
+                                                        t_end = 153)))
 
 
 # Format and plot R and incidence results
-colomns <- c(1:4, 8)
-state_r <- (mt_r_results$R[,colomns]) %>% 
-   mutate(region = "state") %>% 
-   rename(mean_r = `Mean(R)`,
-          sd_r = `Std(R)`,
-          median_r = `Median(R)`)
-
-state_dates <- as.data.frame(mt_r_results$dates)
-state_i <- as.data.frame(mt_r_results$I)
-state_cil <- as.data.frame(mt_r_results$R$`Quantile.0.025(R)`)
-state_cih <- as.data.frame(mt_r_results$R$`Quantile.0.975(R)`)
-state_dates_new <- cbind(state_dates, state_i) %>% 
-   rename(dates = 1,
-          incidence = 2) %>% 
-   mutate(dates = ymd(dates))
-state_dates_new <- state_dates_new[-(1:14), 1:2]
-state_dates_new <- cbind(state_dates_new, state_cil, state_cih) %>% 
-   rename(cl_low = 3,
-          cl_high = 4)
-state_r_clean <- cbind(state_r, state_dates_new)
-
-total_cases <- sum(mt_case_data$case)
-date_today <- format(Sys.Date(), "%d %b %Y")
+colomns <- c(3, 4, 5, 8, 11)
+state_r <- (mt_r_results$R[,colomns]) 
+state_r
 
 
-state_r_plot <- state_r_clean %>% 
-   ggplot() +
-   geom_line(aes(dates, mean_r), size = 1.5, color = "black") +
-   geom_line(aes(dates, cl_low), size = 1.5, color = "grey") +
-   geom_line(aes(dates, cl_high), size = 1.5, color = "grey") +
-   labs(title = "COVID-19 Rolling 14-day R-values, State of Montana, 2020",
-        color = "") +
-   ylab("R-value") +
-   xlab("") +
-   geom_hline(yintercept = 1, color = "black", size = 1.2) +
-   scale_x_date(date_breaks = "3 days", date_labels = "%d-%b") +
-   scale_y_continuous(breaks = seq(0, 10, 0.5), labels = seq(0, 10, 0.5)) +
-   theme_minimal() +
-   theme(strip.text = element_text(size = 16, colour = "black"),
-         title = element_text(size = 12, colour = "black"),
-         panel.grid = element_blank(),
-         panel.grid.major.y = element_line(colour = "grey"),
-         axis.text.x = element_text(size = 12, colour = "black", 
-                                    angle = 90, vjust = 0.4),
-         axis.text.y = element_text(size = 12, colour = "black"),
-         legend.text = element_text(size = 12, colour = "black"),
-         axis.title.y = element_text(size = 12, colour = "black",
-                                     margin = unit(c(0, 5, 0, 0), "mm")),
-         axis.title.x = element_text(size = 12, colour = "black",
-                                     margin = unit(c(5, 0, 0, 0), "mm")),
-         axis.line.x = element_blank(), 
-         axis.line.y = element_blank(), 
-         axis.ticks = element_blank()) +
-   scale_color_manual(values = c("black")) 
-state_r_plot
-#ggsave("C:/R/covid19/state_daily_results/state_r_plot.png", width = 10, height = 8)
+### R-numbers using data from overall period
+#Total: Mean R = 1.05, SD = 0.02, Q0.025 = 1.02, Median = 1.05, Q0.975 = 1.08
+#Pre-SIP: Mean R = 1.03, SD = 0.02, Q0.025 = 1.00, Median = 1.03, Q0.975 = 1.06
+#SIP: Mean R = 1.13, SD = 0.02, Q0.025 = 1.10, Median = 1.13, Q0.975 = 1.17
+#Phase 1: Mean R = 1.05, SD = 0.02, Q0.025 = 1.02, Median = 1.05, Q0.975 = 1.08
+#Phase 2: Mean R = 1.05, SD = 0.02, Q0.025 = 1.01, Median = 1.05, Q0.975 = 1.08
 
-state_inc_plot <- mt_case_data %>% 
-   ggplot() +
-   geom_col(aes(dates, case), 
-            fill = "steelblue") +
-   labs(title = paste0("COVID-19 Cases in State of Montana, 2020", 
-                       " (Total cases = ", total_cases, ")"),
-        subtitle = paste0("Data current as of ", date_today)) +
-   ylab("Number of Cases") +
-   xlab("") +
-   scale_x_date(date_breaks = "3 day", date_labels = "%d-%b") +
-   theme_minimal() +
-   theme(strip.text = element_text(size = 16, colour = "black"),
-         title = element_text(size = 12, colour = "black"),
-         panel.grid = element_blank(),
-         panel.grid.major.y = element_line(colour = "grey"),
-         axis.text.x = element_text(size = 12, colour = "black", 
-                                    angle = 90, vjust = 0.4),
-         axis.text.y = element_text(size = 12, colour = "black"),
-         axis.title.y = element_text(size = 12, colour = "black",
-                                     margin = unit(c(0, 5, 0, 0), "mm")),
-         axis.title.x = element_text(size = 12, colour = "black",
-                                     margin = unit(c(5, 0, 0, 0), "mm")),
-         axis.line.x = element_blank(), 
-         axis.line.y = element_blank(), 
-         axis.ticks = element_blank()) 
-state_inc_plot
-#ggsave("C:/R/covid19/state_daily_results/state_inc_plot.png", width = 10, height = 8)
+### R-numbers using data from each SI period
+#Total: Mean R = 1.05, SD = 0.02, Q0.025 = 1.02, Median = 1.05, Q0.975 = 1.08
+#Pre-SIP: Mean R = 0.92, SD = 0.07, Q0.025 = 0.79, Median = 0.92, Q0.975 = 1.06
+#SIP: Mean R = 0.78, SD = 0.07, Q0.025 = 0.65, Median = 0.78, Q0.975 = 0.93
+#Phase 1: Mean R = 1.21, SD = 0.13, Q0.025 = 0.96, Median = 1.21, Q0.975 = 1.49
+#Phase 2: Mean R = 1.10, SD = 0.02, Q0.025 = 1.06, Median = 1.10, Q0.975 = 1.13
 ```
 
 
 # SI Publication Plots
+
+```{r, fig.width = 10, fig.height = 5}
+colorblind_palette <- c("#88CCEE", "#CC6677", "#DDCC77", "#117733", "#332288", "#AA4499", 
+                        "#44AA99", "#999933", "#882255", "#661100", "#6699CC", "#888888")
+
+plot_colors <- c("#332288", "#882255", "#661100", "#6699CC", "#888888")
+
+# Epi curve - test date
+full_data <- mt_case_data %>% 
+   filter(dates < "2020-08-01" & dates >= "2020-03-01")
+
+total_cases <- sum(mt_case_data$case)
+date_today <- format(Sys.Date(), "%d %b %Y")
+date_14 <- format(Sys.Date() - 14, "%d %b %Y")
+
+epi_curve_full <- full_data %>% 
+   mutate(local_import = factor(local_import,
+                            levels = c(1, 0),
+                            labels = c("imported case", "local case"))) %>% 
+   ggplot() +
+     geom_rect(aes(xmin = as.Date("2020-02-28"), xmax = as.Date("2020-03-28"), ymin=0, ymax=Inf),
+               fill = "gray90", alpha = 0.05) +
+     geom_rect(aes(xmin = as.Date("2020-03-28"), xmax = as.Date("2020-04-26"), ymin=0, ymax=Inf),
+               fill = "gray80", alpha = 0.05) +
+     geom_rect(aes(xmin = as.Date("2020-04-26"), xmax = as.Date("2020-06-01"), ymin=0, ymax=Inf),
+               fill = "gray90", alpha = 0.05) +
+     geom_rect(aes(xmin = as.Date("2020-06-01"), xmax = as.Date("2020-08-01"), ymin=0, ymax=Inf),
+               fill = "gray80", alpha = 0.05) +
+     geom_col(aes(dates, case, fill = local_import), width = 1) +
+     geom_label(aes(x = as.Date("2020-03-14"), y = 125,
+                    label = "Pre-SIP: \n\n Cases = 291 \n SI Pairs = 68 \n\n Mean SI = 4.62 \n (95% CI: 3.79, 5.53) \n\n SD SI = 3.67 \n (95% CI: 2.77, 4.73)"),
+                fill = NA, color = "black") +
+     geom_label(aes(x = as.Date("2020-04-12"), y = 125, 
+                    label = "SIP: \n\n Cases = 168 \n SI Pairs = 47 \n\n Mean SI = 8.52 \n (95% CI: 6.88, 10.37) \n\n SD SI = 6.22 \n (95% CI: 4.61, 8.05)"),
+                fill = NA, color = "black") +
+     geom_label(aes(x = as.Date("2020-05-14"), y = 125,
+                    label = "Phase 1: \n\n Cases = 96 \n SI Pairs = 22 \n\n Mean SI = 5.35 \n (95% CI: 3.51, 7.50) \n\n SD SI = 4.69 \n (95% CI: 2.53, 7.36)"),
+                fill = NA, color = "black") +
+     geom_label(aes(x = as.Date("2020-06-16"), y = 125, 
+                    label = "Phase 2: \n\n Cases = 4,217 \n SI Pairs = 372 \n\n Mean SI = 5.29 \n (95% CI: 4.88, 5.76) \n\n SD SI = 4.45 \n (95% CI: 3.97, 4.93)"),
+                fill = NA, color = "black") +
+     labs(fill = "") +
+     ylab("Number of reported cases") +
+     xlab("Date of symptom onset") +
+     scale_x_date(breaks = seq.Date(from = as.Date("2020-03-01"), 
+                                    to = as.Date("2020-08-01"), 
+                                    by = "5 days"),
+                  labels = seq.Date(from = as.Date("2020-03-01"), 
+                                    to = as.Date("2020-08-01"), 
+                                    by = "5 days"),
+                  date_labels = "%d-%B") +
+     scale_y_continuous(breaks = c(seq(0, 300, 25)), labels = c(seq(0, 300, 25))) +
+     theme_minimal() +
+     theme(strip.text = element_text(size = 16, colour = "black"),
+           title = element_text(size = 12, colour = "black"),
+           panel.grid = element_blank(),
+           panel.grid.major.y = element_line(colour = "gray50"),
+           axis.text.x = element_text(size = 14, colour = "black", 
+                                     angle = 90, vjust = 0.4),
+           axis.text.y = element_text(size = 14, colour = "black"),
+           legend.position = c(0.5, 0.35),
+           axis.title.y = element_text(size = 14, colour = "black",
+                                       margin = unit(c(0, 5, 0, 0), "mm")),
+           axis.title.x = element_text(size = 14, colour = "black",
+                                       margin = unit(c(5, 0, 0, 0), "mm")),
+           legend.text = element_text(size = 14, colour = "black"),
+           axis.line.x = element_blank(), 
+           axis.line.y = element_blank(), 
+           axis.ticks = element_blank()) +
+     scale_fill_manual(values = plot_colors)   
+
+epi_curve_full
+
+#ggsave("si_pub_epi_curve2.jpg", width = 13, height = 7)
+```
+
+
 ```{r, fig.width = 10, fig.height = 5}
 colorblind_palette <- c("#88CCEE", "#CC6677", "#DDCC77", "#117733", "#332288", "#AA4499", 
                         "#44AA99", "#999933", "#882255", "#661100", "#6699CC", "#888888")
@@ -545,80 +599,3 @@ epi_curve_full
 # Phase 2 SI convergence successful: Mean SI = 5.29, SD SI = 4.45
 # June SI convergence successful: Mean SI = 5.26, SD SI = 4.48
 # July SI convergence successful: Mean SI = 5.31, SD SI = 4.44
-
-```{r, fig.width = 10, fig.height = 5}
-colorblind_palette <- c("#88CCEE", "#CC6677", "#DDCC77", "#117733", "#332288", "#AA4499", 
-                        "#44AA99", "#999933", "#882255", "#661100", "#6699CC", "#888888")
-
-plot_colors <- c("#332288", "#882255", "#661100", "#6699CC", "#888888")
-
-# Epi curve - test date
-full_data <- mt_case_data %>% 
-   filter(dates < "2020-08-01" & dates >= "2020-03-01")
-
-total_cases <- sum(mt_case_data$case)
-date_today <- format(Sys.Date(), "%d %b %Y")
-date_14 <- format(Sys.Date() - 14, "%d %b %Y")
-
-epi_curve_full <- full_data %>% 
-   mutate(local_import = factor(local_import,
-                            levels = c(1, 0),
-                            labels = c("imported case", "local case"))) %>% 
-   ggplot() +
-     geom_rect(aes(xmin = as.Date("2020-02-28"), xmax = as.Date("2020-03-28"), ymin=0, ymax=Inf),
-               fill = "gray90", alpha = 0.05) +
-     geom_rect(aes(xmin = as.Date("2020-03-28"), xmax = as.Date("2020-04-26"), ymin=0, ymax=Inf),
-               fill = "gray70", alpha = 0.05) +
-     geom_rect(aes(xmin = as.Date("2020-04-26"), xmax = as.Date("2020-06-01"), ymin=0, ymax=Inf),
-               fill = "gray90", alpha = 0.05) +
-     geom_rect(aes(xmin = as.Date("2020-06-01"), xmax = as.Date("2020-08-01"), ymin=0, ymax=Inf),
-               fill = "gray70", alpha = 0.05) +
-     geom_col(aes(dates, case, fill = local_import), width = 1) +
-     geom_label(aes(x = as.Date("2020-03-14"), y = 125,
-                    label = "Pre-SIP: \n\n Cases = 291 \n SI Pairs = 68 \n\n Mean SI = 4.62 \n (95% CI: 3.79, 5.53) \n\n SD SI = 3.67 \n (95% CI: 2.77, 4.73)"),
-                fill = NA, color = "black") +
-     geom_label(aes(x = as.Date("2020-04-12"), y = 125, 
-                    label = "SIP: \n\n Cases = 168 \n SI Pairs = 47 \n\n Mean SI = 8.52 \n (95% CI: 6.88, 10.37) \n\n SD SI = 6.22 \n (95% CI: 4.61, 8.05)"),
-                fill = NA, color = "black") +
-     geom_label(aes(x = as.Date("2020-05-14"), y = 125,
-                    label = "Phase 1: \n\n Cases = 96 \n SI Pairs = 22 \n\n Mean SI = 5.35 \n (95% CI: 3.51, 7.50) \n\n SD SI = 4.69 \n (95% CI: 2.53, 7.36)"),
-                fill = NA, color = "black") +
-     geom_label(aes(x = as.Date("2020-06-16"), y = 125, 
-                    label = "Phase 2: \n\n Cases = 4,217 \n SI Pairs = 372 \n\n Mean SI = 5.29 \n (95% CI: 4.88, 5.76) \n\n SD SI = 4.45 \n (95% CI: 3.97, 4.93)"),
-                fill = NA, color = "black") +
-     labs(title = "Reported COVID-19 cases in Montana by date of symptom onset",
-          subtitle = paste0("Total cases = 4,772; Total SI Pairs = 509; Overall Mean SI = 5.51 (95% CI: 5.13, 5.90); Overall SD SI = 4.62 (95% CI: 4.21, 5.05)"),
-          fill = " ") +
-     ylab("Number of reported cases") +
-     xlab("") +
-     scale_x_date(breaks = seq.Date(from = as.Date("2020-03-01"), 
-                                    to = as.Date("2020-08-01"), 
-                                    by = "5 days"),
-                  labels = seq.Date(from = as.Date("2020-03-01"), 
-                                    to = as.Date("2020-08-01"), 
-                                    by = "5 days"),
-                  date_labels = "%d-%b") +
-     scale_y_continuous(breaks = c(seq(0, 300, 25)), labels = c(seq(0, 300, 25))) +
-     theme_minimal() +
-     theme(strip.text = element_text(size = 16, colour = "black"),
-           title = element_text(size = 12, colour = "black"),
-           panel.grid = element_blank(),
-           panel.grid.major.y = element_line(colour = "gray75"),
-           axis.text.x = element_text(size = 12, colour = "black", 
-                                     angle = 90, vjust = 0.4),
-           axis.text.y = element_text(size = 12, colour = "black"),
-           legend.position = "top",
-           axis.title.y = element_text(size = 12, colour = "black",
-                                       margin = unit(c(0, 5, 0, 0), "mm")),
-           axis.title.x = element_text(size = 12, colour = "black",
-                                       margin = unit(c(5, 0, 0, 0), "mm")),
-           legend.text = element_text(size = 12, colour = "black"),
-           axis.line.x = element_blank(), 
-           axis.line.y = element_blank(), 
-           axis.ticks = element_blank()) +
-     scale_fill_manual(values = plot_colors)   
-
-epi_curve_full
-
-#ggsave("si_pub_epi_curve2.jpg", width = 13, height = 7)
-```
