--- a/MCCHD_covid_primary_figures.Rmd
+++ b/MCCHD_covid_primary_figures.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Missoula County COVID-19 Cases"
 author: "Ethan Walker, University of Montana"
-date: "Data as of November 13, 2020"
+date: "Data as of November 16, 2020"
 output: pdf_document
 header-includes:
     - \usepackage[labelformat=empty, font={Large, bf}]{caption}
@@ -1194,7 +1194,7 @@ epi_curve_onset
 
 \pagebreak  
 
-```{r}
+```{r, include=FALSE, eval=FALSE}
 inc_data <- covid_data %>% 
    rename(dates = symptom_onset_date_new) %>% 
    filter(!is.na(dates)) %>% 
