--- a/MCCHD_covid_primary_figures.Rmd
+++ b/MCCHD_covid_primary_figures.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Missoula County COVID-19 Cases"
 author: "Ethan Walker, University of Montana"
-date: "Data as of November 16, 2020"
+date: "Data as of November 19, 2020"
 output: pdf_document
 header-includes:
     - \usepackage[labelformat=empty, font={Large, bf}]{caption}
@@ -1198,7 +1198,7 @@ epi_curve_onset
 inc_data <- covid_data %>% 
    rename(dates = symptom_onset_date_new) %>% 
    filter(!is.na(dates)) %>% 
-   filter(dates > "2020-08-31" & dates < Sys.Date() - 13) %>% 
+   filter(dates > "2020-08-30" & dates < Sys.Date() - 13) %>% 
    arrange(dates) %>% 
    select(dates, case) %>% 
    group_by(dates) %>% 
@@ -1560,16 +1560,19 @@ input_path <- c("C:/Users/ethan.walker/Box/Missoula_COVID19EpiProfile_Working/")
 
 
 sewage_data <- 
-   read_xlsx(paste0(input_path, "Msla WW COVID graph.xlsx"), sheet = 1,
-             range = "A2:G26", 
+   read_xlsx(paste0(input_path, "Msla WW COVID graph 2020-11-13.xlsx"), sheet = 1,
+             range = "A2:I33", 
                         col_names = c("date", "n1_gene", "n2_gene", 
-                                      "daily_inc", "new_case_7day_ave", 
-                                      "active_cases", "active_cases_7day_ave"),
+                                      "daily_inc", "new_case_7day_ave", "new_case_7day_ave2",
+                                      "active_cases", "active_cases_7day_ave",
+                                      "daily_cases"),
                         col_types = c("date", "numeric", "numeric",
+                                      "numeric", "numeric", "numeric",
                                       "numeric", "numeric",
-                                      "numeric", "numeric"))
+                                      "numeric"))
 
-sewage_model <- lm(new_case_7day_ave ~ n1_gene, data = sewage_data)
+sewage_model <- lm(active_cases ~ n1_gene, data = sewage_data)
+cor.test(sewage_data$active_cases, sewage_data$n1_gene)
 summary(sewage_model)
 
 sewage_plot <- sewage_data %>% 
