--- a/initial_cleaning_new.Rmd
+++ b/initial_cleaning_new.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "MCCHD Covid-19 initial data cleaning"
 author: "Ethan Walker"
-date: "Started 23 Nov 2020, Updated 23 Nov 2020"
+date: "Started 23 Nov 2020, Updated 30 Nov 2020"
 output:
   pdf_document: default
   html_document:
@@ -31,8 +31,8 @@ input_path <- c("C:/Users/ethan.walker/Box/Missoula_COVID19EpiProfile_Working/")
 
 
 covid_data_initial <- 
-   read_xlsx(paste0(input_path, "COVID data 11.23.20.xlsx"), sheet = 1,
-             range = "A2:AA5000", 
+   read_xlsx(paste0(input_path, "COVID data 11.30.20.xlsx"), sheet = 1,
+             range = "A2:AA10000", 
                         col_names = c("case_id", "case_status", "um_case", "age", "gender", "race", 
                                       "ethnicity", "zipcode", "healthcare_worker",
                                       "symptoms", "symptom_type", "symptom_onset_date",
