--- a/MCCHD_covid_figures_new.Rmd
+++ b/MCCHD_covid_figures_new.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Missoula County COVID-19 Cases"
 author: "Ethan Walker, University of Montana"
-date: "Data as of December 11, 2020"
+date: "Data as of December 13, 2020"
 output: pdf_document
 header-includes:
     - \usepackage[labelformat=empty, font={Large, bf}]{caption}
@@ -114,12 +114,13 @@ age_count_plot
 
 ```{r}
 age_n <- covid_data %>% 
-   filter(!is.na(age_group) & !is.na(test_date))
+   filter(!is.na(age_group) & !is.na(test_date)) %>% 
+   filter(test_date > "2020-09-01")
 age_cases <- sum(age_n$case)
 
 # Age group line plot - counts by month
 age_count_month_plot <- covid_data %>% 
-   filter(test_date > "2020-08-01") %>% 
+   filter(test_date > "2020-09-01") %>% 
    mutate(week_of_year = cut.Date(test_date, breaks = "1 week", start.on.monday = FALSE),
           week_of_year = ymd(week_of_year)) %>% 
    group_by(age_group, week_of_year) %>% 
@@ -141,10 +142,10 @@ age_count_month_plot <- covid_data %>%
         color = "Age group") +
       ylab("Number of cases per week") +
       xlab("") +
-      scale_x_date(breaks = seq.Date(from = as.Date("2020-08-02"), 
+      scale_x_date(breaks = seq.Date(from = as.Date("2020-09-02"), 
                                     to = as.Date(Sys.Date()), 
                                     by = "7 days"),
-                  labels = seq.Date(from = as.Date("2020-08-02"), 
+                  labels = seq.Date(from = as.Date("2020-09-02"), 
                                     to = as.Date(Sys.Date()), 
                                     by = "7 days"),
                   date_labels = "%d-%b") +
@@ -175,12 +176,13 @@ age_count_month_plot
 
 ```{r}
 age_n <- covid_data %>% 
-   filter(!is.na(age_group3) & !is.na(test_date))
+   filter(!is.na(age_group3) & !is.na(test_date)) %>% 
+   filter(test_date > "2020-09-01")
 age_cases <- sum(age_n$case)
 
 # Age group line plot - counts by month
 age_count_month_plot2 <- covid_data %>% 
-   filter(test_date > "2020-08-01") %>% 
+   filter(test_date > "2020-09-01") %>% 
    mutate(week_of_year = cut.Date(test_date, breaks = "1 week", start.on.monday = FALSE),
           week_of_year = ymd(week_of_year)) %>% 
    group_by(age_group3, week_of_year) %>% 
@@ -202,10 +204,10 @@ age_count_month_plot2 <- covid_data %>%
         color = "Age group") +
       ylab("Number of cases per week") +
       xlab("") +
-      scale_x_date(breaks = seq.Date(from = as.Date("2020-08-02"), 
+      scale_x_date(breaks = seq.Date(from = as.Date("2020-09-02"), 
                                     to = as.Date(Sys.Date()), 
                                     by = "7 days"),
-                  labels = seq.Date(from = as.Date("2020-08-02"), 
+                  labels = seq.Date(from = as.Date("2020-09-02"), 
                                     to = as.Date(Sys.Date()), 
                                     by = "7 days"),
                   date_labels = "%d-%b") +
@@ -276,12 +278,13 @@ age_incidence_plot_bar
 
 ```{r}
 age_n <- covid_data %>% 
-   filter(!is.na(age_group) & !is.na(test_date))
+   filter(!is.na(age_group) & !is.na(test_date)) %>% 
+   filter(test_date > "2020-09-01")
 age_cases <- sum(age_n$case)
 
 # Incidence line plot by age and month
 age_incidence_plot_line <- covid_data %>% 
-   filter(test_date > "2020-08-01") %>% 
+   filter(test_date > "2020-09-01") %>% 
    mutate(week_of_year = cut.Date(test_date, breaks = "1 week", start.on.monday = FALSE),
           week_of_year = ymd(week_of_year)) %>% 
    select(case, age_group, age_group_percent, county_pop, week_of_year) %>% 
@@ -313,10 +316,10 @@ age_incidence_plot_line <- covid_data %>%
       geom_label(aes(x = Sys.Date()-10, y = 650, 
                     label = "Cases from the shaded \n dates may not yet be \n reflected in the graph."),
                 fill = NA) +
-      scale_x_date(breaks = seq.Date(from = as.Date("2020-08-02"), 
+      scale_x_date(breaks = seq.Date(from = as.Date("2020-09-02"), 
                                     to = as.Date(Sys.Date()), 
                                     by = "7 days"),
-                  labels = seq.Date(from = as.Date("2020-08-02"), 
+                  labels = seq.Date(from = as.Date("2020-09-02"), 
                                     to = as.Date(Sys.Date()), 
                                     by = "7 days"),
                   date_labels = "%d-%b") +
@@ -349,7 +352,7 @@ age_incidence_plot_line
 # Epi curve - test date
 
 plot_data <- covid_data %>% 
-   filter(test_date > "2020-07-31") 
+   filter(test_date > "2020-08-31") 
 
 total_cases <- sum(plot_data$case)
 date_today <- format(Sys.Date(), "%d %b %Y")
@@ -364,10 +367,6 @@ epi_curve_test_date <- plot_data %>%
               size = 1, linetype = "dashed") +
      geom_text(aes(x = as.Date("2020-09-07"), label = "Labor Day", vjust = -0.5,
                  y = 100), colour = "black", angle = 90, text = element_text(size=14)) +
-     geom_vline(xintercept = as.numeric(as.Date("2020-08-19")), color = "black", 
-              size = 1, linetype = "dashed") +
-     geom_text(aes(x = as.Date("2020-08-19"), label = "UM semester start", vjust = -0.5,
-                 y = 100), colour = "black", angle = 90, text = element_text(size=14)) +
      geom_vline(xintercept = as.numeric(as.Date("2020-10-31")), color = "black", 
               size = 1, linetype = "dashed") +
      geom_text(aes(x = as.Date("2020-10-31"), label = "Halloween", vjust = -0.5,
@@ -379,15 +378,15 @@ epi_curve_test_date <- plot_data %>%
      geom_label(aes(x = Sys.Date()-10, y = 125, 
                     label = "Cases from the shaded \n dates may not yet be \n reflected in the graph."),
                 fill = NA) +
-     labs(title = "COVID-19 Cases in Missoula County Since August 1, 2020",
+     labs(title = "COVID-19 Cases in Missoula County Since September 1, 2020",
           subtitle = paste0("Cases in plot = ", total_cases),
           fill = " ") +
      ylab("Number of Cases") +
      xlab("Test Date") +
-     scale_x_date(breaks = seq.Date(from = as.Date("2020-08-01"), 
+     scale_x_date(breaks = seq.Date(from = as.Date("2020-09-01"), 
                                     to = as.Date(Sys.Date()), 
                                     by = "3 days"),
-                  labels = seq.Date(from = as.Date("2020-08-01"), 
+                  labels = seq.Date(from = as.Date("2020-09-01"), 
                                     to = as.Date(Sys.Date()), 
                                     by = "3 days"),
                   date_labels = "%d-%b") + 
@@ -425,7 +424,7 @@ epi_curve_test_date
 case_data <- covid_data %>% 
    rename(dates = test_date) %>% 
    filter(!is.na(dates)) %>% 
-   filter(dates > "2020-06-30" & dates < Sys.Date() - 13) %>% 
+   filter(dates > "2020-08-31" & dates < Sys.Date() - 13) %>% 
    arrange(dates) %>% 
    select(dates, case) %>% 
    arrange(dates) %>% 
@@ -476,7 +475,7 @@ county_r <- cbind(county_r, county_dates_new)
 
 
 county_r_plot <- county_r %>% 
-   filter(dates > "2020-07-31") %>% 
+   filter(dates > "2020-08-31") %>% 
    ggplot() +
    geom_line(aes(dates, mean_r), size = 1.5, color = "black") +
    #geom_line(aes(dates, cl_low), size = 1.5, color = "grey") +
